# DemoAllure

./: .gitignore  CMakeLists.txt  DemoAllureProject.sln  JENKINS_SETUP.md  Jenkinsfile  README.md  allureConfig.json  build.sh
DemoAllureProject.Tests/: DemoAllureProject.Tests.csproj  UnitTest1.cs
include/: Calculator.h  StringOperations.h
src/: Calculator.cpp  StringOperations.cpp
tests/: AllureHelper.cpp  AllureHelper.h  AllureTestListener.cpp  AllureTestListener.h  CalculatorTests.cpp  StringOperationTests.cpp  main.cpp
